# aftertone

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.cursor/: hooks.json
.cursor/commands/: aftertone-doctor.md  aftertone-lang.md  aftertone-mode.md  aftertone-off.md  aftertone-on.md  aftertone-repair.md  aftertone-restart.md  aftertone-speed.md  aftertone-status.md  aftertone-toggle.md  aftertone-voice.md
.cursor/hooks/: README.md  (+3 more)
docs/: README.md  V2_AUDIT.md  docs.html  index.html  styles.css
img/: README.md
py/: README.md  diagnose_speak_hooks.sh  diagnose_speak_hooks_report.py  fetch_assets.py  helper.py  hook_payload_trace.py  hook_skip_diag.py  hook_stdin_normalize.py  install_global_codex_hooks.py  install_global_hooks.py  install_global_opencode_hooks.py  pyproject.toml  speak_summary_config.py  speak_summary_prepare.py  test_speak_summary_pipeline.sh  tts_daemon.py  tts_daemon_ctl.py  tts_io.py  uninstall_global_hooks.py  voice_presets.py
py/.cursor/: hooks.json
py/aftertone/: README.md  __init__.py  __main__.py  adapters.py  cli.py  config.py  doctor.py  extract.py  hook_json.py  mcp_server.py  paths.py  prepare.py  sessions.py  spoken_tag.py  summary.py  text_utils.py
py/tests/: test_aftertone_adapters.py  test_aftertone_v2.py  test_install_global_codex_hooks.py  test_install_global_opencode_hooks.py  test_speak_summary_config.py  test_tts_daemon_ctl.py  test_uninstall_global_hooks.py  test_voice_presets.py
scripts/: README.md  bootstrap.sh  install.ps1  install.sh  repair-windows-hooks.ps1  uninstall.ps1  uninstall.sh
(+10 files in other folders)
